--- a/staffpicks.html
+++ b/staffpicks.html
@@ -162,48 +162,75 @@
     </div>
     <div class="story-grid" id="picks">
       <!-- Games -->
-      <div class="story-card" data-category="games">
-        <img src="CS Keyart.png">
-        <h3>Citizen Sleeper</h3>
-        <small>Jump Over the Age / Fellow Traveller</small>
-        <div class="card-overlay">Cyberpunk on a spacestation with a vibe as good as any. This is one of our all-time favorite pieces of cyberpunk media. The gameplay loop might not be for everyone, but the story and dialogue is as good as it gets.</div>
-      </div>
-      <div class="story-card" data-category="games">
-        <img src="Ruiner Keyart.jpg">
-        <h3>Ruiner</h3>
-        <small>Reikon Games</small>
-        <div class="card-overlay">If you like cyberpunk stuff and you like top-down shooters, it's pretty can't miss. Don't overthink the story; it's guns + gritty setting.</div>
-      </div>
-      <div class="story-card" data-category="games">
-        <img src="Ghostrunner Keyart.jpg">
-        <h3>Ghostrunner</h3>
-        <small>One More Level</small>
-        <div class="card-overlay">Like the sword parts of cyberpunk? Place this game.</div>
-      </div>
-      <div class="story-card" data-category="games">
-        <img src="CP2077 Keyart.jpg">
-        <h3>Cyberpunk 2077</h3>
-        <small>CD Projekt Red</small>
-        <div class="card-overlay">We'd love to have a clickier take, but it really is as good as advertised. We'd also imagine you wouldn't be on this website without already having played this game.</div>
-      </div>
-      <div class="story-card" data-category="games">
-        <img src="Cloudpunk Keyart.jpg">
-        <h3>Cloudpunk</h3>
-        <small>ION Lands</small>
-        <div class="card-overlay">Live out your cyberpunk delivery boy fantasy. Something about pixel art and neon works really, really well, too.</div>
-      </div>
-      <div class="story-card" data-category="games">
-        <img src="Transistor Keyart.jpg">
-        <h3>Transistor</h3>
-        <small>Supergiant Games</small>
-        <div class="card-overlay">You like Hades? Great news: those folks made a cyberpunk game.</div>
-      </div>
-      <div class="story-card" data-category="games">
-        <img src="FC3 Blood Dragon.jpg">
-        <h3>Far Cry 3: Blood Dragon</h3>
-        <small>Ubisoft</small>
-        <div class="card-overlay">Everyone knows Far Cry 3 was the best Far Cry, and the retro-futuristic '80s action parody dlc matches that speed.</div>
-      </div>
+  <div class="story-card" data-category="games">
+  <img src="CS Keyart.png">
+  <h3>Citizen Sleeper</h3>
+  <small>Jump Over the Age / Fellow Traveller</small>
+  <div class="card-overlay">
+    Cyberpunk on a spacestation with a vibe as good as any. This is one of our all-time favorite pieces of cyberpunk media. The gameplay loop might not be for everyone, but the story and dialogue is as good as it gets.
+    <br><br><a href="https://store.steampowered.com/app/1578650/Citizen_Sleeper/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+  </div>
+</div>
+
+<div class="story-card" data-category="games">
+  <img src="Ruiner Keyart.jpg">
+  <h3>Ruiner</h3>
+  <small>Reikon Games</small>
+  <div class="card-overlay">
+    If you like cyberpunk stuff and you like top-down shooters, it's pretty can't miss. Don't overthink the story; it's guns + gritty setting.
+    <br><br><a href="https://store.steampowered.com/app/464060/RUINER/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+  </div>
+</div>
+
+<div class="story-card" data-category="games">
+  <img src="Ghostrunner Keyart.jpg">
+  <h3>Ghostrunner</h3>
+  <small>One More Level</small>
+  <div class="card-overlay">
+    Like the sword parts of cyberpunk? Place this game.
+    <br><br><a href="https://store.steampowered.com/app/1139900/Ghostrunner/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+  </div>
+</div>
+
+<div class="story-card" data-category="games">
+  <img src="CP2077 Keyart.jpg">
+  <h3>Cyberpunk 2077</h3>
+  <small>CD Projekt Red</small>
+  <div class="card-overlay">
+    We'd love to have a clickier take, but it really is as good as advertised. We'd also imagine you wouldn't be on this website without already having played this game.
+    <br><br><a href="https://store.steampowered.com/app/1091500/Cyberpunk_2077/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+  </div>
+</div>
+
+<div class="story-card" data-category="games">
+  <img src="Cloudpunk Keyart.jpg">
+  <h3>Cloudpunk</h3>
+  <small>ION Lands</small>
+  <div class="card-overlay">
+    Live out your cyberpunk delivery boy fantasy. Something about pixel art and neon works really, really well, too.
+    <br><br><a href="https://store.steampowered.com/app/746850/Cloudpunk/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+  </div>
+</div>
+
+<div class="story-card" data-category="games">
+  <img src="Transistor Keyart.jpg">
+  <h3>Transistor</h3>
+  <small>Supergiant Games</small>
+  <div class="card-overlay">
+    You like Hades? Great news: those folks made a cyberpunk game.
+    <br><br><a href="https://store.steampowered.com/app/237930/Transistor/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+  </div>
+</div>
+
+<div class="story-card" data-category="games">
+  <img src="FC3 Blood Dragon.jpg">
+  <h3>Far Cry 3: Blood Dragon</h3>
+  <small>Ubisoft</small>
+  <div class="card-overlay">
+    Everyone knows Far Cry 3 was the best Far Cry, and the retro-futuristic '80s action parody dlc matches that speed.
+    <br><br><a href="https://store.steampowered.com/app/233270/Far_Cry_3_Blood_Dragon/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+  </div>
+</div>
 
       <!-- Books -->
       <div class="story-card" data-category="books">
