--- a/staffpicks.html
+++ b/staffpicks.html
@@ -264,45 +264,71 @@
       </div>
 
       <!-- Books -->
-      <div class="story-card" data-category="books">
-        <img src="Neuromancer.png">
-        <h3>Neuromancer</h3>
-        <small>William Gibson</small>
-        <div class="card-overlay">
-          <div class="overlay-content">The definitive cyberpunk novel that launched a genre.</div>
-        </div>
-      </div>
-      <div class="story-card" data-category="books">
-        <img src="Mirrorshades.jpg">
-        <h3>Mirrorshades</h3>
-        <small>Edited by Bruce Sterling</small>
-        <div class="card-overlay">
-          <div class="overlay-content">An anthology that defined the cyberpunk movement.</div>
-        </div>
-      </div>
-      <div class="story-card" data-category="books">
-        <img src="Pattern Recognition.jpg">
-        <h3>Pattern Recognition</h3>
-        <small>William Gibson</small>
-        <div class="card-overlay">
-          <div class="overlay-content">A post-9/11 exploration of identity, branding, and connection.</div>
-        </div>
-      </div>
-      <div class="story-card" data-category="books">
-        <img src="Cryptonomicon.jpg">
-        <h3>Cryptonomicon</h3>
-        <small>Neal Stephenson</small>
-        <div class="card-overlay">
-          <div class="overlay-content">A sprawling tale of code, war, and information age power.</div>
-        </div>
-      </div>
-      <div class="story-card" data-category="books">
-        <img src="Synners.jpg">
-        <h3>Synners</h3>
-        <small>Pat Cadigan</small>
-        <div class="card-overlay">
-          <div class="overlay-content">A prescient look at digital identity and networked consciousness.</div>
-        </div>
+    <div class="story-card" data-category="books">
+  <img src="Neuromancer.png">
+  <h3>Neuromancer</h3>
+  <small>William Gibson</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      If you're here and you haven't read this book yet, why? This is the one. Don't overthink it.
+      <br><br>
+      Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
+    </div>
+  </div>
+</div>
+
+<div class="story-card" data-category="books">
+  <img src="Mirrorshades.jpg">
+  <h3>Mirrorshades</h3>
+  <small>Edited by Bruce Sterling</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      An anthology that defined the cyberpunk movement.
+      <br><br>
+      Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
+    </div>
+  </div>
+</div>
+
+<div class="story-card" data-category="books">
+  <img src="Pattern Recognition.jpg">
+  <h3>Pattern Recognition</h3>
+  <small>William Gibson</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      A post-9/11 exploration of identity, branding, and connection.
+      <br><br>
+    Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
+    </div>
+  </div>
+</div>
+
+<div class="story-card" data-category="books">
+  <img src="Cryptonomicon.jpg">
+  <h3>Cryptonomicon</h3>
+  <small>Neal Stephenson</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      A sprawling tale of code, war, and information age power.
+      <br><br>
+    Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
+    </div>
+  </div>
+</div>
+
+<div class="story-card" data-category="books">
+  <img src="Synners.jpg">
+  <h3>Synners</h3>
+  <small>Pat Cadigan</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      A prescient look at digital identity and networked consciousness.
+      <br><br>
+      Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
+    </div>
+  </div>
+</div>
+
       </div>
 
       <!-- Film and TV -->
