--- a/staffpicks.html
+++ b/staffpicks.html
@@ -168,7 +168,7 @@
     <div class="filters">
       <button class="filter-btn" data-filter="games">Games</button>
       <button class="filter-btn" data-filter="books">Books</button>
-      <button class="filter-btn" data-filter="film">Film and TV</button>
+      <button class="filter-btn" data-filter="film">Film / TV</button>
       <button class="filter-btn" data-filter="other">Other</button>
     </div>
     <div class="story-grid" id="picks">
