--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
   <div class="card">
     <img src="NM Art.png" alt="Poll image">
     <h3>Poll: Best Cyberpunk Media</h3>
-    <p>We asked readers to weigh in on the most iconic games, movies, books, and art that define the cyberpunk canon. Here’s what they said.</p>
+    <p>We asked readers to weigh in on the most iconic games, movies, books, and art that define the cyberpunk genre.</p>
   </div>
 </a>
     <a href="https://bowliopia.github.io/burnline/staffpicks.html" class="card-link">
@@ -342,4 +342,5 @@
   </script>
 </body>
 </html>
+
 
